Fixed form and div overlapping

--- a/style.css
+++ b/style.css
@@ -147,11 +147,6 @@ body {
 
 }
 
-.main-container{ 
-  width: 100vw;
-  border: 1px solid red;
-}
-
 .gif {
   max-width: 100%;
 }
